@@ -1,5 +1,6 @@
 CHANGELOG XX XXXX 2010 Pierre Frisch
 Rev the source code to 3.1.8
+JmDNS fails to get ServiceInfo from cache - ID: 3018122
 
 CHANGELOG 10 June 2010 Pierre Frisch
 Rev the source code to 3.1.7
